update server program

--- a/network/server/package.json
+++ b/network/server/package.json
@@ -1,13 +1,10 @@
 {
-  "name"         : "todo",
+  "name"         : "tempature-server",
   "version"      : "0.0.1",
   "private"      : true,
   "dependencies" : {
     "express"    : "*",
-    "ejs"        : "*",
-    "ejs-locals" : "*",
     "mongodb"   : "*",
-    "moment" 	: "*",
-    "lodash"  : "latest"
+    "moment" 	: "*"
   }
 }
